--- a/lab7_/package.json
+++ b/lab7_/package.json
@@ -2,7 +2,7 @@
   "name": "lab7_",
   "version": "0.1.0",
   "private": true,
-  "homepage": "t1m0feevka.github.io/Front_End/",
+  "homepage": "https://t1m0feevka.github.io/Front_End/lab7_",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
